@@ -30,7 +30,7 @@
  * @key randomness
  * @modules jdk.crypto.cryptoki
  * @run main/othervm ReinitDigest
- * @run main/othervm ReinitDigest sm
+ * @run main/othervm -Djava.security.manager=allow ReinitDigest sm
  */
 
 import java.security.MessageDigest;
